fix attach release assets workflow

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -200,4 +200,4 @@ jobs:
       - name: Upload assets to GitHub Release
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release upload "${{ github.event.release.tag_name }}" dist/* --clobber
+        run: gh release upload "${{ github.event.release.tag_name }}" dist/* --clobber --repo "${{ github.repository }}"
