--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
 
+      - name: Apply tag version to Cargo.toml
+        run: python release/apply_tag_version.py --tag "${{ github.event.release.tag_name }}"
+
       - name: Validate release metadata
         id: validate
         run: python release/validate.py --tag "${{ github.event.release.tag_name }}"
@@ -45,6 +48,12 @@ jobs:
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Apply tag version to Cargo.toml
+        run: python release/apply_tag_version.py --tag "${{ github.event.release.tag_name }}"
+
+      - name: Validate release metadata
+        run: python release/validate.py --tag "${{ github.event.release.tag_name }}"
 
       - name: Install maturin
         run: python -m pip install --upgrade pip maturin
@@ -107,6 +116,12 @@ jobs:
 
       - name: Add Rust targets
         run: rustup target add ${{ steps.target.outputs.rust_targets }}
+
+      - name: Apply tag version to Cargo.toml
+        run: python release/apply_tag_version.py --tag "${{ github.event.release.tag_name }}"
+
+      - name: Validate release metadata
+        run: python release/validate.py --tag "${{ github.event.release.tag_name }}"
 
       - name: Install maturin
         run: python -m pip install --upgrade pip maturin
